[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/Artikel/corner_tabs.png" type="Texture" id=1]
[ext_resource path="res://Fonts/Capitalis/Capitalis.tres" type="DynamicFont" id=2]
[ext_resource path="res://Fonts/TimesSS/TimesHeader18.tres" type="DynamicFont" id=3]
[ext_resource path="res://Assets/Artikel/bread.png" type="Texture" id=4]
[ext_resource path="res://Scripts/ArtikelBox.gd" type="Script" id=5]

[node name="ArtikelBox" type="Control"]
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Backing" type="ColorRect" parent="."]
margin_right = 68.0
margin_bottom = 68.0
color = Color( 0.121569, 0.231373, 0.313726, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Corners" type="TextureRect" parent="Backing"]
margin_left = 2.0
margin_top = 2.0
margin_right = 66.0
margin_bottom = 66.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Backing"]
margin_left = 2.0
margin_top = 2.0
margin_right = 66.0
margin_bottom = 66.0
texture = ExtResource( 4 )

[node name="QuantityBacking" type="ColorRect" parent="Backing"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -19.0
margin_right = 19.0
margin_bottom = 15.0
color = Color( 0, 0, 0, 0.392157 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuantityLabel" type="Label" parent="Backing"]
modulate = Color( 0.890196, 0.756863, 0.0470588, 1 )
anchor_left = 0.5
anchor_right = 0.5
margin_left = -33.7851
margin_top = -3.0
margin_right = 34.2149
margin_bottom = 18.0
custom_fonts/font = ExtResource( 3 )
text = "16"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PriceBacking" type="ColorRect" parent="Backing"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -19.0
margin_top = -16.0
margin_right = 19.0
margin_bottom = -1.0
color = Color( 0, 0, 0, 0.392157 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PriceLabel" type="Label" parent="Backing"]
modulate = Color( 0.8, 0.0705882, 0.0156863, 1 )
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -34.0
margin_top = -20.0
margin_right = 34.0
margin_bottom = 1.0
custom_fonts/font = ExtResource( 3 )
text = "150"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HoverBox" type="ColorRect" parent="."]
visible = false
margin_right = 241.0
margin_bottom = 105.0
color = Color( 0.0745098, 0.141176, 0.188235, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameLabel" type="Label" parent="HoverBox"]
modulate = Color( 0.866667, 0.721569, 0.054902, 1 )
margin_top = 8.0
margin_right = 241.0
margin_bottom = 29.0
custom_fonts/font = ExtResource( 2 )
text = "Manufactured Goods"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="HoverBox"]
margin_top = 30.0
margin_right = 241.0
margin_bottom = 111.0
custom_constants/separation = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="HoverBox/VBoxContainer"]
margin_right = 241.0
margin_bottom = 21.0
custom_fonts/font = ExtResource( 3 )
text = "Perishable"
align = 1

[node name="Label3" type="Label" parent="HoverBox/VBoxContainer"]
margin_top = 23.0
margin_right = 241.0
margin_bottom = 44.0
custom_fonts/font = ExtResource( 3 )
text = "Food"
align = 1

[node name="Label4" type="Label" parent="HoverBox/VBoxContainer"]
margin_top = 46.0
margin_right = 241.0
margin_bottom = 67.0
custom_fonts/font = ExtResource( 3 )
text = "Something"
align = 1

[node name="HoverTimer" type="Timer" parent="."]
[connection signal="gui_input" from="Backing" to="." method="_on_Backing_gui_input"]
[connection signal="mouse_entered" from="Backing" to="." method="_on_Backing_mouse_entered"]
[connection signal="timeout" from="HoverTimer" to="." method="_on_HoverTimer_timeout"]
